--- a/views/editQues.ejs
+++ b/views/editQues.ejs
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<div align="center">
-<div class="form-container">
-    <table class="table table-hover">
+<div class="container">
     <form action=<%= routes.editQuestion(question.id) %> method="post">
         <tr>
             <td>Title</td>
-        <td><input type="text" placeholder="Title" name="title" value=<%= question.title %> required=true></td>
+            <td><input type="text" placeholder="Title" name="title" value=<%= question.title %> required=true></td>
         </tr>
         <tr>
             <td>Description</td>
             <td>
                 <textarea name="description" placeholder="Description"><%= question.description %></textarea>
             </td>
-        </tr>   
-    </table>
+        </tr>
+        </table>
 </div>
 </div>
-        <div align="center"><input class="btn btn-primary" type="submit" value="Update Question"></div>
-    </form>
+<div align="center"><input class="btn btn-primary" type="submit" value="Update Question"></div>
+</form>
 
 <%- include("./partials/footer.ejs") %>
