--- a/views/getQues.ejs
+++ b/views/getQues.ejs
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
 <div class="question__title">
-    <h2>Question : <%= question.title %></h2>
+    <h2 class="mb-5"><%= question.title %></h2>
 
     <div>
-        <h5>Name : <%= question.userName %> </h5>
+        <h5>name : <%= question.userName %> </h5>
     </div>
-    <div align="right"><span>Date : <%= question.createdAt %></span></div>
+    <div align="right"><span>Date : <%= question.createdAt.toISOString().slice(0,10).replace(/-/g,"");  %></span></div>
     <div align="right">
+        <% if (teacher === true || userId === questionUploaderId) {%>
         <a href=<%= routes.editQuestion(question.id) %>> Edit Question </a>
-        <a href=<%= routes.deleteQuestion(question.id) %>> Delete Question </a></div>
+        <a href=<%= routes.deleteQuestion(question.id) %>> Delete Question </a>
+        <%}%>
+    </div>
 </div>
 
 <hr>
 <div class="question__description">
     <span><%= question.description %></span>
-</div>
-
-<div class="container">
-    <form action=<%= routes.uploadComment(question.id) %> method="post">
-        <img src="#" alt="Avater" width="100px" height="100px">
-        <span><%= userName %></span>
-        <input type="text" placeholder="comment here" name="comment" required=true>
-        <div align="center"><input type="submit" class="btn btn-primary" value="Upload comment"></div>
-    </form>
-    <hr>
-    <% comments.forEach(function (comment, index) { %>
-
-    <img src="#" alt="Avater" width="100px" height="100px">
-    <!-- TODO: User Parsing-->
-    <span><%= comment.userName %></span>
-    <div>
-        <h5><%= comment.comment %></h5>
     </div>
-    <div align="right"><span><%= comment.createdAt %></span></div>
-    <div align="right">
-        <a href=<%= routes.deleteComment(comment.id) %> class="comment__delete"> Delete Comment </a></div>
-    <hr>
-    <% }); %>
 
-    <%- include("./partials/footer.ejs") %>
+    <div class="container">
+        <form action=<%= routes.uploadComment(question.id) %> method="post">
+            <img src=<%= userImage %> alt="Avater" width="50px" height="50px" style="border-radius:20px;">
+            <span><%= userName %></span>
+            <input type="text" placeholder="comment here" name="comment" required=true>
+            <div align="center"><input type="submit" class="btn btn-primary" value="Upload comment"></div>
+        </form>
+        <hr>
+        <% comments.forEach(function (comment, index) { %>
+
+        <img src="/<%= comment.userImage %>" alt="Avater" width="50px" height="50px"
+            style="border-radius:20px; margin-right:10px;">
+
+        <span><%= comment.userName %></span>
+        <div>
+            <h5><%= comment.comment %></h5>
+        </div>
+        <div align="right">
+            <% if (teacher === true || userId == comment.userId) {%>
+            <a href=<%= routes.deleteComment(comment.id) %> class="comment__delete"> Delete Comment </a>
+            <% }%>
+        </div>
+        <div align="right"><span><%= comment.createdAt.toISOString().slice(0,10).replace(/-/g,""); %></span></div>
+        <hr>
+        <% }); %>
+
+        <%- include("./partials/footer.ejs") %>
