--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -87,6 +87,12 @@
               <i class="fas fa-align-left"></i>
               <span>Side Bar</span>
             </button>
+            <a href="/quiz">
+              <button type="button" id="sidebarCollapse" class="btn btn-info ml-4 shadow">
+                <i class="fas fa-pen-square"></i>
+                <span>Quiz</span>
+              </button>
+            </a>
             <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
               data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
