--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -2,6 +2,7 @@
 <%- include("./partials/header.ejs") %>
 
 <body>
+    <h2>Video Upload</h2>
     <div align="center">
         <div class="form-container">
             <table class="table table-hover">
