--- a/views/editQues.ejs
+++ b/views/editQues.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
+<h2>Question</h2>
 <div align="center">
     <div class="form-container">
         <table class="table table-hover">
