--- a/views/uploadQuiz.ejs
+++ b/views/uploadQuiz.ejs
@@ -31,16 +31,16 @@
             </div>
             <div class="form-group">
                 <h5 class="text">What is Correct ? 🤔</h5>
-                <label for="answerCheckOne" class="control-label btn btn-info">
+                <label for="answerCheckOne" class="control-label btn btn-outline-info hover">
                     <input type="radio" id="answerCheckOne" name="answerCheck" value="1">Quiz 1
                 </label>
-                <label for="answerCheckTwo" class="control-label btn btn-info">
+                <label for="answerCheckTwo" class="control-label btn btn-outline-info hover">
                     <input type="radio" id="answerCheckTwo" name="answerCheck" value="2">Quiz 2
                 </label>
-                <label for="answerCheckThree" class="control-label btn btn-info">
+                <label for="answerCheckThree" class="control-label btn btn-outline-info hover">
                     <input type="radio" id="answerCheckThree" name="answerCheck" value="3">Quiz 3
                 </label>
-                <label for="answerCheckFour" class="control-label btn btn-info">
+                <label for="answerCheckFour" class="control-label btn btn-outline-info hover">
                     <input type="radio" id="answerCheckFour" name="answerCheck" value="4">Quiz 4
                 </label>
             </div>
