--- a/views/editVideo.ejs
+++ b/views/editVideo.ejs
@@ -6,7 +6,7 @@
             <form action=<%= routes.editVideo(video.id) %> method="post">
                 <tr>
                     <td>Ttile</td>
-                    <td><input type="text" laceholder="Title" name="title" value=<%= video.title %>></td>
+                    <td><input type="text" laceholder="Title" name="title" value="<%= video.title %>"></td>
                 </tr>
                 <tr>
                     <td>Description</td>
