--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,11 @@
 <!doctype html>
 
-<footer>
-    
+<footer class="d-flex justify-content-center align-items-center">
+    <span class="footer__text">Mirim Learning Lab</span>
+    <div class="footer__icon">
+        <i class="fab fa-youtube"></i>
+    </div>
+    <span class="footer__text">G-Bridge 2020 &copy;</span>
 </footer>
 
 </body>
