--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<h2>editProfile</h2>
+<script language="javascript">
+  function validate() {
+    let email = documnet.getElementById("email").value;
+    let password = document.getElementById("password").value;
+    let password2 = document.getElementById("password2").value;
+    let name = document.getElementById("name").value;
 
-    <script language="javascript">
-      function validate() {
-        let email=documnet.getElementById("email").value;
-        let password = document.getElementById("password").value;
-        let password2 = document.getElementById("password2").value;
-        let name = document.getElementById("name").value;
+    if (password != password2) {
+      alert("암호가 서로 다릅니다. 다시입력하세요");
+      return false;
+    }
+    return true;
+  }
+</script>
 
-        if (password != password2) {
-          alert("암호가 서로 다릅니다. 다시입력하세요");
-          return false;
-        }
-        return true;
-      }
-    </script>
-
-    <p>
-    <div class="container">  <!-- container class 가 페이지의 컨텐츠영역을 지정 -->
-    <div class="jumbotron" style="width:500px; margin:auto">
+<p>
+<div class="container">
+  <!-- container class 가 페이지의 컨텐츠영역을 지정 -->
+  <div class="jumbotron" style="width:500px; margin:auto">
 
     <div class="bm-login-form" style='width:400px; margin-left:auto; margin-right:auto; border:1px'>
 
       <div class="starter-template">
-        <h5> Join update</h5> <hr>
+        <h5> Join update</h5>
+        <hr>
       </div>
 
-     <form name=join onsubmit="return validate()" method=post action=<%=routes.editProfile %>>
-       <div class="form-group">
-         <label for="exampleInputEmail1">UserId</label>
-         <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" value=<%=profile.email %>>
-       </div>
-       <div class="form-group">
-         <label for="exampleInputPassword1">Password</label>
-         <input type="password" class="form-control" name="password" id="password" value=<%=profile.password %>>
-       </div>
-       <div class="form-group">
-         <label for="exampleInputPassword2">Password one more</label>
-         <input type="password" class="form-control" name="password2" id="password2"value=<%=profile.password2 %>>
-       </div>
-       <div class="form-group">
-         <label for="exampleInputEmail1">UserName</label>
-         <input type="text" class="form-control" name="name" id="name" value=<%=profile.name %>>
-       </div>
-       
-         <hr>
-         <button type="submit" class="btn btn-primary">Join</button>
-      </form>
-     </div>
-     </div>
-    </div><!-- /.container -->
+      <form name=join onsubmit="return validate()" method=post action=<%=routes.editProfile %>>
+        <div class="form-group">
+          <label for="exampleInputEmail1">UserId</label>
+          <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+            value=<%=profile.email %>>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" name="password" id="password" value=<%=profile.password %>>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword2">Password one more</label>
+          <input type="password" class="form-control" name="password2" id="password2" value=<%=profile.password2 %>>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">UserName</label>
+          <input type="text" class="form-control" name="name" id="name" value=<%=profile.name %>>
+        </div>
 
- <!-- Footer 영역 -->
- 
+        <hr>
+        <button type="submit" class="btn btn-primary">Join</button>
+      </form>
+    </div>
+  </div>
+</div><!-- /.container -->
+
+<!-- Footer 영역 -->
+
 <%- include("./partials/footer.ejs") %>
