--- a/views/join.ejs
+++ b/views/join.ejs
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<h2>Join </h2>
 <hr>
-<div >
+<div>
   <!-- container class 가 페이지의 컨텐츠영역을 지정 -->
   <div class="jumbotron" style="width:500px; margin:auto">
-     <form name=join onsubmit="return validate()" method=post action=<%= routes.join %> enctype="multipart/form-data">
-        <div class="form-group">
-          <label for="exampleInputEmail1">UserId</label>
-          <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
-            placeholder="이메일주소로 입력하세요">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" name="password" id="password" placeholder="암호는 최대20자까지 입력">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword2">Password one more</label>
-          <input type="password" class="form-control" name="password2" id="password2" placeholder="암호를 한번더 입력해주세요">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">UserName</label>
-          <input type="text" class="form-control" name="name" id="name" placeholder="이름을 입력하세요">
-        </div>
-        <div class="form-group ">
-          <label for="radio__student">Student</label>
-          <input type="radio" id="radio__student" name="studentCheck" value="1">
-          <label for="radio__teacher">Teacher</label>
-          <input type="radio" id="radio__teacher" name="studentCheck" value="0">
-        </div>
-        <div class="form-group ">
-          <input type="file" id="file" name="imageFile" accept="image/*">
-        </div>
+    <form name=join onsubmit="return validate()" method=post action=<%= routes.join %> enctype="multipart/form-data">
+      <div class="form-group">
+        <label for="exampleInputEmail1"><b>UserId</b></label>
+        <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+          placeholder="이메일주소로 입력하세요">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1"><b>Password</b></label>
+        <input type="password" class="form-control" name="password" id="password" placeholder="암호는 최대20자까지 입력">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword2"><b>Password one more</b></label>
+        <input type="password" class="form-control" name="password2" id="password2" placeholder="암호를 한번더 입력해주세요">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1"><b>UserName</b></label>
+        <input type="text" class="form-control" name="name" id="name" placeholder="이름을 입력하세요">
+      </div>
+      <div class="form-group ">
+        <label for="radio__student"><b>Student</b></label>
+        <input type="radio" id="radio__student" name="studentCheck" value="1">
+        <label for="radio__teacher"><b>Teacher</b></label>
+        <input type="radio" id="radio__teacher" name="studentCheck" value="0">
+      </div>
+      <div class="form-group ">
+        <input type="file" id="file" name="imageFile" accept="image/*">
+      </div>
 
 
-        <hr>
-        <div align="center"><button type="submit" class="btn btn-primary">Join</button></div>
-      </form>
-    </div>
+      <hr>
+      <div align="center"><button type="submit" class="btn btn-primary container-fluid">Join</button></div>
+    </form>
+  </div>
 </div><!-- /.container -->
 <%- include("./partials/footer.ejs") %>
