--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<h2>Login</h2>
 <div class="jumbotron" style="width:500px; margin:auto">
-<form action=<%= routes.login %> method="post">
-  <div>
-    <label for="email"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="email" required>
+  <form action=<%= routes.login %> method="post">
+    <div>
+      <label for="email"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="email" required>
 
-    <label for="password"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="password" required>
-    <hr>
-    <div align="center">
-      <button class="btn btn-primary" type="submit">Login</button>
+      <label for="password"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="password" required>
+      <hr>
+      <div align="center">
+        <button class="btn btn-primary container-fluid" type="submit">Login</button>
+      </div>
     </div>
-  </div>
-</form>
+  </form>
 </div>
 <%- include("./partials/footer.ejs") %>
