--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -4,15 +4,24 @@
     <% quizs.forEach(function (quiz, index) { %>
     <div class="quiz__container container mt-5">
         <% if (teacher === true) {%>
-        <a href=<%= routes.editQuiz(quiz.id) %>> Edit Quiz </a>
-        <a href=<%= routes.deleteQuiz(quiz.id) %>> Delete Quiz </a>
+        <a href=<%= routes.editQuiz(quiz.id) %> class="btn btn-secondary"> Edit Quiz </a>
+        <a href=<%= routes.deleteQuiz(quiz.id) %> class="btn btn-secondary"> Delete Quiz </a>
         <%}%>
-            <h2 class="quiz__title"><%= quiz.question %></h2>
-        
-        <option class="quiz__question btn btn-outline-success" value="1">1. <%= quiz.answerOne %></option>
-        <option class="quiz__question btn btn-outline-success" value="2">2. <%= quiz.answerTwo %></option>
-        <option class="quiz__question btn btn-outline-success" value="3">3. <%= quiz.answerThree %></option>
-        <option class="quiz__question btn btn-outline-success" value="4">4. <%= quiz.answerFour %></option>
+            <h5 class="quiz__title text-center text-info mt-3 mb-5"><b>#Q.<%= index+1 %> : <%= quiz.question %></b>
+        </h5>
+
+        <option class="quiz__question btn btn-outline-success container-fluid mb-2 text-left" value="1">1.
+            <%= quiz.answerOne %>
+        </option>
+        <option class="quiz__question btn btn-outline-success container-fluid mb-2 text-left" value="2">2.
+            <%= quiz.answerTwo %>
+        </option>
+        <option class="quiz__question btn btn-outline-success container-fluid mb-2 text-left" value="3">3.
+            <%= quiz.answerThree %>
+        </option>
+        <option class="quiz__question btn btn-outline-success container-fluid mb-2 text-left" value="4">4.
+            <%= quiz.answerFour %>
+        </option>
         <div class="quiz__answer" style="display:none"><%= quiz.answerCheck %></div>
     </div>
     <% }); %>
@@ -46,7 +55,7 @@
             }
             const selectQuizParent = e.target.parentNode;
             for (let i = 0; i < selectQuizParent.childNodes.length; i++) {
-                if (selectQuizParent.childNodes[i].className == "quiz__question btn btn-info")
+                if (selectQuizParent.childNodes[i].className == "quiz__question btn btn-outline-success container-fluid mb-2 text-left")
                     selectQuizParent.childNodes[i].disabled = true;
             }
         })
